[gd_scene load_steps=6 format=3 uid="uid://bsa4mxdiai4cn"]

[ext_resource type="Script" path="res://scenes/objects/ship.gd" id="1_7xjbh"]
[ext_resource type="PackedScene" uid="uid://jbfwmujfs1m6" path="res://scenes/objects/ship_dark.tscn" id="2_7dclb"]
[ext_resource type="PackedScene" uid="uid://sgj8xt0y2258" path="res://assets/Pirate Kit/Models/FBX format/pirate_captain.fbx" id="2_mfn3u"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wdqjd"]
radius = 2.5
height = 15.0

[sub_resource type="BoxShape3D" id="BoxShape3D_lc0gq"]
size = Vector3(4.63831, 6.16199, 15.0031)

[node name="Ship" type="RigidBody3D" groups=["Player"]]
collision_mask = 4
script = ExtResource("1_7xjbh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.00308923, 0.999995, 0, -0.999995, -0.00308923, -0.127131, 2.22943, 0.0288048)
shape = SubResource("CapsuleShape3D_wdqjd")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.00308923, 0.999995, 0, -0.999995, -0.00308923, -0.127131, 2.22943, 0.0288048)
disabled = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.127131, 1.34, -1.18401)
shape = SubResource("BoxShape3D_lc0gq")
disabled = true

[node name="ProbeContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.305694, 0)

[node name="Probe" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 5)

[node name="Probe2" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)

[node name="Probe3" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -5)

[node name="Probe4" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="Probe5" type="Marker3D" parent="ProbeContainer"]

[node name="Probe6" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="Probe7" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 5)

[node name="Probe8" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)

[node name="Probe9" type="Marker3D" parent="ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -5)

[node name="ship_dark3" parent="." instance=ExtResource("2_7dclb")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="pirate_captain" parent="." instance=ExtResource("2_mfn3u")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 4.83726, 4.64391, 18.3471)

[node name="CamaraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CamaraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.943223, 0.332161, 0, -0.332161, 0.943223, 0, 15, 18)

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
